# ThreadObservabilityPOC

./: README.md  test_real_logs.py
addons/thread-observability/app/: pyproject.toml
addons/thread-observability/app/src/thread_observability/: config.py  health.py
addons/thread-observability/app/src/thread_observability/api/: app_meta.py  chat_helpers.py  counter_series.py  dashboard.html  diagnostics.py  http_api.py  lifespan.py  link_signal_history.py  mcp_tools.py  schemas.py  supervisor_client.py  triage.py
addons/thread-observability/app/tests/: test_analyze_node.py  test_assessment_engine.py  test_assessment_feedback.py  test_assessment_scheduler.py  test_assessment_schema.py  test_chat_http.py  test_counter_series.py  test_dashboard_http.py  test_device_discovery_diagnostics.py  test_direct_chat.py  test_ha_availability.py  test_health.py  test_link_signal_history.py  test_nodes.py  test_otbr_adapter.py  test_otbr_parser.py  test_otbr_rest.py  test_re_attached_guard.py  test_reasoner.py  test_response_envelope.py  test_routing.py  test_sqlite_store.py  test_supervisor_client.py  test_topology.py  test_utils_helpers.py
addons/thread-observability/app/tests/contract/: conftest.py  test_dev_status_contract.py  test_health_contract.py  test_neighbors_contract.py  test_partitions_contract.py  test_routes_contract.py  test_topology_contract.py
addons/thread-observability/app/tests/integration/: conftest.py  test_pipeline_tick.py  test_routing_property.py
addons/thread-observability/app/tests/scenarios/: conftest.py  loader.py  test_scenarios.py
(+79 files in other folders)
