[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thread-observability"
version = "0.1.0"
description = "Thread observability services for Home Assistant add-on"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "pydantic>=2.7",
  "httpx>=0.27",
  "websockets>=12.0"
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
thread-observability = "thread_observability.main:cli"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
"thread_observability.api" = ["dashboard.html"]

[tool.setuptools.packages.find]
where = ["src"]
